--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "v-textcomplete",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "A simple, flexible and easy-to-use text completion component.",
   "author": "jcc <changejian@gmail.com>",
   "license": "MIT",
   "main": "dist/v-textcomplete.js",
-  "repository": "jcc/v-textcomplete",
+  "repository": "To-maruyama/v-textcomplete",
   "keywords": [
     "textcomplete",
     "text-complete",
