--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v-textcomplete",
+  "name": "vue-textcomplete",
   "version": "0.2.6",
   "description": "A simple, flexible and easy-to-use text completion component.",
   "author": "jcc <changejian@gmail.com>",
